--- a/src/AppBundle/Resources/views/qds/nord/qds-nord.html.twig
+++ b/src/AppBundle/Resources/views/qds/nord/qds-nord.html.twig
@@ -22,7 +22,7 @@
                             {% if loop.first %} 
                                 <div class="box-form-{{etat}} box-form">   
                             {% else %}    
-                                <h3>{{ val.blockTitle }}</h3>
+                                <div id="icon-{{ val.blockIcon }}" class="icon-title-h3"></div><h3>{{ val.blockTitle }}</h3>
                                 <hr class="hr-nord hr-title">
                                 {% if val.guideID is defined %}
                                     <input type="hidden" value="{{ val.guideID }}" name="id_tl_{{ nb_guide }}___guideID" id="{{ val.idBlock }}"/>
@@ -91,7 +91,7 @@
                                                     <div class="box-yesno row">
                                                            <div class="col-md-6 col-sm-6 col-xs-6">
                                                             <li><input type="radio" value="1" name="{{ value.responseIDQuestion }}___yesno" data-idresponse="{{ value.responseIDQuestion }}"/> Oui </li>
-                                                            <li><input type="radio" value="0" name="{{ value.responseIDQuestion }}___yesno-" data-idresponse="{{ value.responseIDQuestion }}"/> Non </li>
+                                                            <li><input type="radio" value="0" name="{{ value.responseIDQuestion }}___yesno" data-idresponse="{{ value.responseIDQuestion }}"/> Non </li>
                                                         </div>
                                                     </div>
                                                 {% endif %}
