--- a/web/css/style-nord.scss
+++ b/web/css/style-nord.scss
@@ -18,19 +18,19 @@ $color-number-step-menu : #b8dde3;
 $color-note-0to10-orange : #ff9219;
 $color-note-0to10-vert : #009446;
 
-  /* icons */
+  /* icons Surement changer les nom des icons sur la plateforme de dev*/
 $path-to-icon : "/img/nord/icons/";
-$icon-internet : "#{$path-to-icon}iconmonstr-computer-11.png";
-$icon-marque : "#{$path-to-icon}66nord-logo.png";
-$icon-conseiller : "#{$path-to-icon}iconmonstr-user-1.png";
-$icon-documents : "#{$path-to-icon}iconmonstr-file-10.png";
-$icon-transport : "#{$path-to-icon}iconmonstr-airport-1.png";
-$icon-accueil : "#{$path-to-icon}iconmonstr-handshake-5.png";
-$icon-guide : "#{$path-to-icon}iconmonstr-user-31.png";
-$icon-hebergements : "#{$path-to-icon}iconmonstr-home-6.png";
-$icon-repas : "#{$path-to-icon}iconmonstr-fast-food-chinese.png";
-$icon-logistique : "#{$path-to-icon}iconmonstr-airport-15.png";
-$icon-programme : "#{$path-to-icon}iconmonstr-delivery-10.png";
+$icon-internet : "#{$path-to-icon}internet.png";
+$icon-marque : "#{$path-to-icon}66nord.png";
+$icon-conseiller : "#{$path-to-icon}conseiller.png";
+$icon-documents : "#{$path-to-icon}documents.png";
+$icon-transport : "#{$path-to-icon}transport.png";
+$icon-accueil : "#{$path-to-icon}accueil.png";
+$icon-guide : "#{$path-to-icon}guide.png";
+$icon-hebergements : "#{$path-to-icon}hebergements.png";
+$icon-repas : "#{$path-to-icon}repas.png";
+$icon-logistique : "#{$path-to-icon}logistique.png";
+$icon-programme : "#{$path-to-icon}programme.png";
 
 
 /**********************
