--- a/src/AppBundle/Resources/views/qds/nord/qds-nord.html.twig
+++ b/src/AppBundle/Resources/views/qds/nord/qds-nord.html.twig
@@ -36,79 +36,80 @@
 
                                 {% for key,value in val %}
                                     {% if value is iterable %}
-                                        <div class="row">
-                                            <div class="col-md-12 box-global">
+                                        {% if value.visibleQuestion >  0 %}
+                                            <div class="row">
+                                                <div class="col-md-12 box-global">
 
-                                                {% if value.titleQuestion != "[N/A]" %}
-                                                    {% if value.typeQuestion == "TEXT" %}
-                                                        <div class="col-md-10 col-sm-10 col-xs-10">
-                                                            {{ value.titleQuestion }}
+                                                    {% if value.titleQuestion != "[N/A]" %}
+                                                        {% if value.typeQuestion == "TEXT" %}
+                                                            <div class="col-md-10 col-sm-10 col-xs-10">
+                                                                {{ value.titleQuestion }}
+                                                            </div>
+                                                        {% endif %}
+                                                        {% if value.typeQuestion != "TEXT" %}
+                                                            <div class="col-md-5 col-sm-4 col-xs-10 box-title-question">
+                                                                <label>{{ value.titleQuestion }}</label>
+                                                            </div>
+                                                        {% endif %}
+                                                    {% endif %}
+
+                                                    {% if value.typeQuestion == 'STAR' %} 
+                                                        <div class="box-rating col-md-6 col-sm-6">
+                                                              <fieldset class="{{ value.responseIDQuestion }}___rating rating">
+                                                                <input type="radio" id="{{ value.responseIDQuestion }}-star5" name="{{ value.responseIDQuestion }}___rating" value="5" /><label data-before="" class = "full" for="{{ value.responseIDQuestion }}-star5"></label>
+                                                                <input type="radio" id="{{ value.responseIDQuestion }}-star4" name="{{ value.responseIDQuestion }}___rating" value="4" /><label class = "full" for="{{ value.responseIDQuestion }}-star4"></label>
+                                                                <input type="radio" id="{{ value.responseIDQuestion }}-star3" name="{{ value.responseIDQuestion }}___rating" value="3" /><label class = "full" for="{{ value.responseIDQuestion }}-star3"></label>
+                                                                <input type="radio" id="{{ value.responseIDQuestion }}-star2" name="{{ value.responseIDQuestion }}___rating" value="2" /><label class = "full" for="{{ value.responseIDQuestion }}-star2"></label>
+                                                                <input type="radio" id="{{ value.responseIDQuestion }}-star1" name="{{ value.responseIDQuestion }}___rating" value="1" /><label class = "full" for="{{ value.responseIDQuestion }}-star1"></label>
+                                                            </fieldset>
+                                                            <div id="messageSF">
+                                                                <span class="first-sf">Choisissez votre note</span>
+                                                                <span>pas du tout satisfait</span>
+                                                                <span>pas satisfait</span>
+                                                                <span>peu satisfait</span>
+                                                                <span>satisfait</span>
+                                                                <span>Très satisfait</span>
+                                                            </div>
                                                         </div>
                                                     {% endif %}
-                                                    {% if value.typeQuestion != "TEXT" %}
-                                                        <div class="col-md-5 col-sm-4 col-xs-10 box-title-question">
-                                                            <label>{{ value.titleQuestion }}</label>
+
+                                                    {% if value.typeQuestion == 'TEXT' %} 
+                                                        <div class="box-text col-md-12 col-sm-12">
+                                                            <textarea class="question-text" placeholder="Votre avis ici..." name="{{ value.responseIDQuestion }}___text" data-idresponse="{{ value.responseIDQuestion }}" ></textarea>
                                                         </div>
                                                     {% endif %}
-                                                {% endif %}
 
-                                                {% if value.typeQuestion == 'STAR' %} 
-                                                    <div class="box-rating col-md-6 col-sm-6">
-                                                          <fieldset class="{{ value.responseIDQuestion }}___rating rating">
-                                                            <input type="radio" id="{{ value.responseIDQuestion }}-star5" name="{{ value.responseIDQuestion }}___rating" value="5" /><label data-before="" class = "full" for="{{ value.responseIDQuestion }}-star5"></label>
-                                                            <input type="radio" id="{{ value.responseIDQuestion }}-star4" name="{{ value.responseIDQuestion }}___rating" value="4" /><label class = "full" for="{{ value.responseIDQuestion }}-star4"></label>
-                                                            <input type="radio" id="{{ value.responseIDQuestion }}-star3" name="{{ value.responseIDQuestion }}___rating" value="3" /><label class = "full" for="{{ value.responseIDQuestion }}-star3"></label>
-                                                            <input type="radio" id="{{ value.responseIDQuestion }}-star2" name="{{ value.responseIDQuestion }}___rating" value="2" /><label class = "full" for="{{ value.responseIDQuestion }}-star2"></label>
-                                                            <input type="radio" id="{{ value.responseIDQuestion }}-star1" name="{{ value.responseIDQuestion }}___rating" value="1" /><label class = "full" for="{{ value.responseIDQuestion }}-star1"></label>
-                                                        </fieldset>
-                                                        <div id="messageSF">
-                                                            <span class="first-sf">Choisissez votre note</span>
-                                                            <span>pas du tout satisfait</span>
-                                                            <span>pas satisfait</span>
-                                                            <span>peu satisfait</span>
-                                                            <span>satisfait</span>
-                                                            <span>Très satisfait</span>
+                                                    {% if value.typeQuestion == 'QCM2' %} 
+                                                        <div class="box-qcm row">
+                                                            {% for key,qcm in value.choiceQuestion %}
+                                                               <div class="col-md-6 col-sm-6 col-xs-6 input-qcm"><input type="checkbox" class="qcm-choices" name="{{ value.responseIDQuestion }}___qcm" data-idresponse="{{ value.responseIDQuestion }}"/> {{ qcm }} </div>
+                                                            {% endfor %} 
                                                         </div>
-                                                    </div>
-                                                {% endif %}
+                                                    {% endif %}
 
-                                                {% if value.typeQuestion == 'TEXT' %} 
-                                                    <div class="box-text col-md-12 col-sm-12">
-                                                        <textarea class="question-text" placeholder="Votre avis ici..." name="{{ value.responseIDQuestion }}___text" data-idresponse="{{ value.responseIDQuestion }}" ></textarea>
-                                                    </div>
-                                                {% endif %}
-
-
-                                                {% if value.typeQuestion == 'QCM2' %} 
-                                                    <div class="box-qcm row">
-                                                        {% for key,qcm in value.choiceQuestion %}
-                                                           <div class="col-md-6 col-sm-6 col-xs-6 input-qcm"><input type="checkbox" class="qcm-choices" name="{{ value.responseIDQuestion }}___qcm" data-idresponse="{{ value.responseIDQuestion }}"/> {{ qcm }} </div>
-                                                        {% endfor %} 
-                                                    </div>
-                                                {% endif %}
-
-                                                {% if value.typeQuestion == 'YESNO' %} 
-                                                    <div class="box-yesno row">
-                                                           <div class="col-md-6 col-sm-6 col-xs-6">
-                                                            <li><input type="radio" value="1" name="{{ value.responseIDQuestion }}___yesno" data-idresponse="{{ value.responseIDQuestion }}"/> Oui </li>
-                                                            <li><input type="radio" value="0" name="{{ value.responseIDQuestion }}___yesno" data-idresponse="{{ value.responseIDQuestion }}"/> Non </li>
+                                                    {% if value.typeQuestion == 'YESNO' %} 
+                                                        <div class="box-yesno row">
+                                                               <div class="col-md-6 col-sm-6 col-xs-6">
+                                                                <li><input type="radio" value="1" name="{{ value.responseIDQuestion }}___yesno" data-idresponse="{{ value.responseIDQuestion }}"/> Oui </li>
+                                                                <li><input type="radio" value="0" name="{{ value.responseIDQuestion }}___yesno" data-idresponse="{{ value.responseIDQuestion }}"/> Non </li>
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                {% endif %}
+                                                    {% endif %}
 
-                                                {% if value.typeQuestion == '0to10' %} 
-                                                    <div class="box-0to10 row">
+                                                    {% if value.typeQuestion == '0to10' %} 
+                                                        <div class="box-0to10 row">
 
-                                                           <div class="col-md-12 col-sm-12 col-xs-12 ">
-                                                            {% for i in 0..10 %}
-                                                                <div class="col-md-1 col-sm-1 col-xs-1 content-0t10"><input type="radio" value="{{ i }}" name="{{ value.responseIDQuestion }}___0to10" data-idresponse="{{ value.responseIDQuestion }}"/></div>
-                                                            {% endfor %}
+                                                               <div class="col-md-12 col-sm-12 col-xs-12 ">
+                                                                {% for i in 0..10 %}
+                                                                    <div class="col-md-1 col-sm-1 col-xs-1 content-0t10"><input type="radio" value="{{ i }}" name="{{ value.responseIDQuestion }}___0to10" data-idresponse="{{ value.responseIDQuestion }}"/></div>
+                                                                {% endfor %}
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                {% endif %}
+                                                    {% endif %}
 
+                                                </div>
                                             </div>
-                                        </div>
+                                        {% endif %}
                                     {% endif %}
                                 {% endfor %}   
                             {% endif %}
