--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -340,5 +340,16 @@ h1 { font-size: 1.5em; margin: 10px; }
   }
 }
 
+#messageSF >span:before { 
+  content: "";
+  position: absolute;
+  right: 50%;
+  top: 0px;
+  width: 0;
+  height: 0;
+  border-top: 14px solid transparent;
+  border-right: 18px solid transparent;
+  border-bottom: 13px solid transparent;
+}
 
 
