Add new field to qds question

--- a/src/AppBundle/Resources/views/qds/nord/qds-nord.html.twig
+++ b/src/AppBundle/Resources/views/qds/nord/qds-nord.html.twig
@@ -125,6 +125,11 @@
                         <input type="submit" value="Valider" id="btn-valider" class="btn btn-primary btn-sm btn-inactive"/>
                     </div>
                 </div>
+                <div class="row">
+                    <a  href="http://www.66nord.com/avis-voyage-66nord" class='ls-modal'>Login</a>
+                    <div id="myModal" class="modal fade">
+                    </div>
+                </div>
             </form>
         </div>
     </div>
