--- a/src/AppBundle/Resources/views/qds/atalante/qds-header-atalante.html.twig
+++ b/src/AppBundle/Resources/views/qds/atalante/qds-header-atalante.html.twig
@@ -4,8 +4,8 @@
     <div class="container-fluid ">
       <div class="row ">
         <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 no-padding-margin">
-          <img src="{{ asset('img/nord/ban.jpg') }}" alt="" width="100%" class="img-header" />
-          <img src="{{ asset('img/nord/logo.png') }}" id="logo-66-nord" alt="" width="100%"  />
+          <img src="{{ asset('img/atalante/ban.jpg') }}" alt="" width="100%" class="img-header" />
+          <img src="{{ asset('img/atalante/logo.png') }}" id="logo-atalante" alt="" width="100%"  />
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 box-title-parent">
         	<div class="box-title-child">
