--- a/web/css/responsive.scss
+++ b/web/css/responsive.scss
@@ -205,3 +205,9 @@
     padding-top: 7px;
   }
 }
+
+@media screen and (max-width: 943px) {
+  .first-sf:before{
+    margin-top: 7px !important;
+  }
+}
