--- a/web/css/style-nord.scss
+++ b/web/css/style-nord.scss
@@ -19,6 +19,7 @@ $color-note-0to10-orange : #ff9219;
 $color-note-0to10-vert : #009446;
 
 
+$path-to-icon : "/img/icons/";
 $icon-marque : "#{$path-to-icon}66nord.png";
 
 #icon-marque{
