--- a/web/css/style-ata.scss
+++ b/web/css/style-ata.scss
@@ -22,6 +22,7 @@ $color-note-0to10-vert : #009446;
 $color-text-bonjour : #202a36;
 
 
+$path-to-icon : "/img/icons/";
 $icon-marque : "#{$path-to-icon}atalante.png";
 
 #icon-marque{
